--- a/Work.html
+++ b/Work.html
@@ -18,7 +18,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Dopetrope</a></h1>
+						<h1><a href="index.html">Georges Brunet</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -44,94 +44,89 @@
 			<!-- Main -->
 				<section id="main">
 					<div class="container">
-						<div class="row">
-							<div class="col-8 col-12-medium">
-
-								<!-- Content -->
-									<article class="box post">
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+					<!-- Blog -->
+						<section>
+							<!--<header class="major">
+								<h2>Work</h2>
+							</header>-->
+							<div class="row">
+								<div class="col-6 col-12-small">
+									<section class="box">
+										<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 										<header>
-											<h2>Right sidebar</h2>
-											<p>Lorem ipsum dolor sit amet feugiat</p>
+											<h2>OctaneX Technologies</h2>
+											<p>formerly known as Standard Alcohol, Inc.</p>
+											<h3>Data Science Intern</h3>
 										</header>
 										<p>
-											Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
-											hendrerit libero placerat. Nulla facilisi. Proin aliquam felis non arcu molestie at accumsan turpis commodo.
-											Proin elementum, nibh non egestas sodales, augue quam aliquet est, id egestas diam justo adipiscing ante.
-											Pellentesque tempus nulla non urna eleifend ut ultrices nisi faucibus.
-										</p>
-										<p>
-											Praesent a dolor leo. Duis in felis in tortor lobortis volutpat et pretium tellus. Vestibulum ac ante nisl,
-											a elementum odio. Duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-											placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-											eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-											elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-											sit amet nullam consequat feugiat dolore tempus.
-										</p>
-										<section>
-											<header>
-												<h3>Something else</h3>
-											</header>
-											<p>
-												Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-												placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
+											From June 2018 to June 2019, I had the pleasure of working as a Data Science Intern at OctaneX
+												Technologies, formerly known as Standard Alcohol at the time.  As a Data Science Intern, 
+												I performed various tasks such as software engineering, database architecture and management, 
+												product analysis and development, data analytics, and reports generation.
 											</p>
+											<h3> OctaneX Optimizer </h3>
 											<p>
-												Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
+											The first project I worked on at OctaneX Technologies was the OctaneX Optimizer. 
+											I was given the task of designing, developing, and coding the software with the creative 
+											guidance of my supervisors. This consisted of creating an easy-to-use and visually appealing 
+											tool with the purpose of optimizing fuel blends under the desired specifics of 38 constraints 
+											given a selection of over a hundred molecules through linear and non-linear programming. This 
+											involved a combination of complex mathematics implemented through code and to quickly learn 
+											previously unfamiliar programming environments. 
+											<br>
+											<br>
+											The OctaneX Optimizer has since been awarded a copyright by the U.S. Copyright Office, 
+											and a registered trademark by the U.S. Patent and Trademark Office.
+											<br>
+											<br>
+											Upon completing the software my new role in this project evolved to implementing 
+											an automatic analytic reports generator in the software and to maintain the updates 
+											of the OctaneX Optimizer. These reports would provide in-depth information on the blends 
+											concocted by the software such as logistics facilitation, actionable insights on product 
+											development, and serve as quality control to present potential improvements in calculations.
 											</p>
-										</section>
-										<section>
-											<header>
-												<h3>So in conclusion ...</h3>
-											</header>
-											<p>
-												Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus. Elementum odio duis semper risus et lectus commodo fringilla.
-												Maecenas sagittis convallis justo vel mattis.
-											</p>
-										</section>
-									</article>
-
-							</div>
-							<div class="col-4 col-12-medium">
-
-								<!-- Sidebar -->
+									</section>
+								</div>
+								<div class="col-6 col-12-small">
 									<section class="box">
 										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 										<header>
-											<h3>Sed etiam lorem nulla</h3>
+											<h2>CU Boulder Department of French and Italian</h2>
+											<h3>French Tutor</h3>
 										</header>
-										<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-										<footer>
-											<a href="#" class="button alt">Magna sed taciti</a>
-										</footer>
+										<p>From September 2016 to March 2018, I worked as a tutor at the Department of French and 
+											Italian at the University of Colorado, Boulder. I provided services to students of all levels, 
+											ranging from beginner levels to Master’s levels. As a French native who learned a few other 
+											languages growing up, I have a good sense of what commonalities in certain languages pose problems 
+											to speakers of languages with different grammatical structures. This motivated me to design level 
+											assessments for my students to measure their capabilities in French by topics and pinpoint the 
+											areas of improvement that aligned with the areas they wanted to improve. I also provided 
+											revisions to students’ papers and assisted them in developing their own voice in French in the 
+											form of writing. 
+										</p>
 									</section>
+								</div>
+								<div class="col-6 col-12-small">
 									<section class="box">
+										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 										<header>
-											<h3>Feugiat consequat</h3>
+											<h2>Aspen Growth Ventures, LLC</h2>
+											<h3>Data Analytics Intern</h3>
 										</header>
-										<p>Veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat sed lorem consequat feugiat lorem dolore.</p>
-										<ul class="divided">
-											<li><a href="#">Sed et blandit consequat sed</a></li>
-											<li><a href="#">Hendrerit tortor vitae sapien dolore</a></li>
-											<li><a href="#">Sapien id suscipit magna sed felis</a></li>
-											<li><a href="#">Aptent taciti sociosqu ad litora</a></li>
-										</ul>
-										<footer>
-											<a href="#" class="button alt">Ipsum consequat</a>
-										</footer>
+										<p>As a Data Analytics Intern at AGV, my role included database creation and management, 
+											product design and development, and data analytics. I was tasked with developing and 
+											implementing an environment for real-time data uptake from market data sources in the energy 
+											and specialty chemicals sector that would perform different analyses. This project merged SQL 
+											organization and Python package methodologies to create an easy-to-use database that used SQL 
+											queries to navigate, and Python package methods to provide visualizations, regression analysis, 
+											inferential statistics, hypothesis testing, and forecasting on data that it would append 
+											in real-time. The goal of this project was to faciliate screening and analyzing market data as 
+											part of a due diligence process for a private equity fund.
+											</p>
 									</section>
-
+								</div>
 							</div>
-						</div>
+						</section>
 					</div>
 				</section>
 		</div>
