--- a/Resume.html
+++ b/Resume.html
@@ -18,7 +18,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Dopetrope</a></h1>
+						<h1><a href="index.html">Georges Brunet</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -104,33 +104,18 @@
 							<div class="col-4 col-12-medium">
 
 								<!-- Sidebar -->
-									<section class="box">
-										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-										<header>
-											<h3>Sed etiam lorem nulla</h3>
-										</header>
-										<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-										<footer>
-											<a href="#" class="button alt">Magna sed taciti</a>
-										</footer>
-									</section>
-									<section class="box">
-										<header>
-											<h3>Feugiat consequat</h3>
-										</header>
-										<p>Veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat sed lorem consequat feugiat lorem dolore.</p>
-										<ul class="divided">
-											<li><a href="#">Sed et blandit consequat sed</a></li>
-											<li><a href="#">Hendrerit tortor vitae sapien dolore</a></li>
-											<li><a href="#">Sapien id suscipit magna sed felis</a></li>
-											<li><a href="#">Aptent taciti sociosqu ad litora</a></li>
-										</ul>
-										<footer>
-											<a href="#" class="button alt">Ipsum consequat</a>
-										</footer>
-									</section>
-
-							</div>
+								<section class="box">
+								  <!--<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>-->
+								  <header>
+									<ul class="social">
+									  <li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/georges-a-brunet/"><span class="label">LinkedIn</span></a></li>
+									  <li><a class="icon brands fa-linkedin-in" href="https://github.com/GeorgesABrunet"><span class="label">LinkedIn</span></a></li>
+									  <li><a class="icon brands fa-linkedin-in" href="https://pootpootpoot.itch.io/"><span class="label">LinkedIn</span></a></li>
+									</ul>
+								  </header>
+								  <p>Find my contact information on LinkedIn, and my projects on itch.io and Github!</p>
+								</section>
+							  </div>
 						</div>
 					</div>
 				</section>
