--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </section>
       </section>
       
-      <!-- Test Setup-->
+      <!-- Main-->
       <section id="main">
         <div class="container">
           <div class="row">
@@ -54,10 +54,12 @@
 
               <!-- Sidebar -->
               <section class="box">
-                <a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+                <!--<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>-->
                 <header>
                   <ul class="social">
-                    <li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
+                    <li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/georges-a-brunet/"><span class="label">LinkedIn</span></a></li>
+                    <li><a class="icon brands fa-linkedin-in" href="https://github.com/GeorgesABrunet"><span class="label">LinkedIn</span></a></li>
+                    <li><a class="icon brands fa-linkedin-in" href="https://pootpootpoot.itch.io/"><span class="label">LinkedIn</span></a></li>
                   </ul>
                 </header>
                 <p>Find my contact information on LinkedIn, and my projects on itch.io and Github!</p>
