--- a/Work.html
+++ b/Work.html
@@ -45,13 +45,9 @@
 				<section id="main">
 					<div class="container">
 					<!-- Blog -->
-						<section>
-							<!--<header class="major">
-								<h2>Work</h2>
-							</header>-->
 							<div class="row">
 								<div class="col-6 col-12-small">
-									<section class="box">
+									<article class="box post">
 										<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 										<header>
 											<h2>OctaneX Technologies</h2>
@@ -85,7 +81,7 @@
 											concocted by the software such as logistics facilitation, actionable insights on product 
 											development, and serve as quality control to present potential improvements in calculations.
 											</p>
-									</section>
+									</article>
 								</div>
 								<div class="col-6 col-12-small">
 									<section class="box">
