--- a/Resume.html
+++ b/Resume.html
@@ -24,9 +24,6 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="Work.html">Work</a></li>
-								<li><a href="Education.html">Education</a></li>
-								<li><a href="Skills.html">Skills</a></li>
 								<li>
 									<a href="#">Projects</a>
 									<ul>
@@ -36,6 +33,9 @@
 									</ul>
 								</li>
 								<li class="current"><a href="Resume.html">Resume</a></li>
+								<li><a href="Work.html">Work</a></li>
+								<li><a href="Education.html">Education</a></li>
+								<li><a href="Skills.html">Skills</a></li>
 							</ul>
 						</nav>
 
@@ -49,55 +49,13 @@
 
 								<!-- Content -->
 									<article class="box post">
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<!--<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>-->
 										<header>
-											<h2>Right sidebar</h2>
-											<p>Lorem ipsum dolor sit amet feugiat</p>
+											<!--<h2>Right sidebar</h2>-->
+											<p>Contact information available upon request</p>
 										</header>
-										<p>
-											Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
-											hendrerit libero placerat. Nulla facilisi. Proin aliquam felis non arcu molestie at accumsan turpis commodo.
-											Proin elementum, nibh non egestas sodales, augue quam aliquet est, id egestas diam justo adipiscing ante.
-											Pellentesque tempus nulla non urna eleifend ut ultrices nisi faucibus.
-										</p>
-										<p>
-											Praesent a dolor leo. Duis in felis in tortor lobortis volutpat et pretium tellus. Vestibulum ac ante nisl,
-											a elementum odio. Duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-											placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-											eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-											elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-											sit amet nullam consequat feugiat dolore tempus.
-										</p>
-										<section>
-											<header>
-												<h3>Something else</h3>
-											</header>
-											<p>
-												Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-												placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
-											</p>
-											<p>
-												Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
-											</p>
-										</section>
-										<section>
-											<header>
-												<h3>So in conclusion ...</h3>
-											</header>
-											<p>
-												Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus. Elementum odio duis semper risus et lectus commodo fringilla.
-												Maecenas sagittis convallis justo vel mattis.
-											</p>
-										</section>
+										<iframe src="images/WebsiteResumeGB.pdf" width="100%" height="900px">
+										</iframe>
 									</article>
 
 							</div>
@@ -109,8 +67,8 @@
 								  <header>
 									<ul class="social">
 									  <li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/georges-a-brunet/"><span class="label">LinkedIn</span></a></li>
-									  <li><a class="icon brands fa-linkedin-in" href="https://github.com/GeorgesABrunet"><span class="label">LinkedIn</span></a></li>
-									  <li><a class="icon brands fa-linkedin-in" href="https://pootpootpoot.itch.io/"><span class="label">LinkedIn</span></a></li>
+									  <li><a class="icon brands fa-github" href="https://github.com/GeorgesABrunet"><span class="label">LinkedIn</span></a></li>
+									  <li><a class="icon brands fa-itch-io" href="https://pootpootpoot.itch.io/"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								  </header>
 								  <p>Find my contact information on LinkedIn, and my projects on itch.io and Github!</p>
