--- a/Work.html
+++ b/Work.html
@@ -21,23 +21,24 @@
 						<h1><a href="index.html">Georges Brunet</a></h1>
 
 					<!-- Nav -->
-						<nav id="nav">
+					<nav id="nav">
+						<ul>
+						  <li class="current"><a href="index.html">Home</a></li>
+						  <li>
+							<a href="#">Projects</a>
 							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li class="current"><a href="Work.html">Work</a></li>
-								<li><a href="Education.html">Education</a></li>
-								<li><a href="Skills.html">Skills</a></li>
-								<li>
-									<a href="#">Projects</a>
-									<ul>
-									<li><a href="GameJams.html">Game Jams</a></li>
-									<li><a href="GD50.html">GD50</a></li>
-									<li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
-									</ul>
-								</li>
-								<li><a href="Resume.html">Resume</a></li>
+							  <li><a href="GameJams.html">Game Jams</a></li>
+							  <li><a href="GD50.html">GD50</a></li>
+							  <li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
 							</ul>
-						</nav>
+						  </li>
+						  <li><a href="Resume.html">Resume</a></li>
+						  <li><a href="Work.html">Work</a></li>
+						  <li><a href="Education.html">Education</a></li>
+						  <li><a href="Skills.html">Skills</a></li>
+						  
+						</ul>
+					  </nav>
 
 				</section>
 
@@ -48,7 +49,7 @@
 							<div class="row">
 								<div class="col-6 col-12-small">
 									<article class="box post">
-										<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/OctaneXtechlogo.png" style = "width: 70%; padding-top: 8%; margin:auto;" alt="" /></a>
 										<header>
 											<h2>OctaneX Technologies</h2>
 											<p>formerly known as Standard Alcohol, Inc.</p>
@@ -85,7 +86,7 @@
 								</div>
 								<div class="col-6 col-12-small">
 									<section class="box">
-										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/CUBoulderlogo.png" style = "width: 60%; padding-top: 8%; margin:auto;" alt="" /></a>
 										<header>
 											<h2>CU Boulder Department of French and Italian</h2>
 											<h3>French Tutor</h3>
@@ -104,7 +105,7 @@
 								</div>
 								<div class="col-6 col-12-small">
 									<section class="box">
-										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/AGVlogo1.png" style = "width: 40%; padding-top: 8%; margin:auto;" alt="" /></a>
 										<header>
 											<h2>Aspen Growth Ventures, LLC</h2>
 											<h3>Data Analytics Intern</h3>
