--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
           <nav id="nav">
             <ul>
               <li class="current"><a href="index.html">Home</a></li>
-              <li><a href="Work.html">Work</a></li>
-              <li><a href="Education.html">Education</a></li>
-              <li><a href="Skills.html">Skills</a></li>
               <li>
                 <a href="#">Projects</a>
                 <ul>
@@ -33,6 +30,10 @@
                 </ul>
               </li>
               <li><a href="Resume.html">Resume</a></li>
+              <li><a href="Work.html">Work</a></li>
+              <li><a href="Education.html">Education</a></li>
+              <li><a href="Skills.html">Skills</a></li>
+              
             </ul>
           </nav>
           <!-- Intro End-->
@@ -58,8 +59,8 @@
                 <header>
                   <ul class="social">
                     <li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/georges-a-brunet/"><span class="label">LinkedIn</span></a></li>
-                    <li><a class="icon brands fa-linkedin-in" href="https://github.com/GeorgesABrunet"><span class="label">LinkedIn</span></a></li>
-                    <li><a class="icon brands fa-linkedin-in" href="https://pootpootpoot.itch.io/"><span class="label">LinkedIn</span></a></li>
+                    <li><a class="icon brands fa-github" href="https://github.com/GeorgesABrunet"><span class="label">LinkedIn</span></a></li>
+                    <li><a class="icon brands fa-itch-io" href="https://pootpootpoot.itch.io/"><span class="label">LinkedIn</span></a></li>
                   </ul>
                 </header>
                 <p>Find my contact information on LinkedIn, and my projects on itch.io and Github!</p>
@@ -70,9 +71,9 @@
 
               <!-- Content -->
               <article class="box post">
-                <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                <a href="#" class="image featured"><img src="images/ProPic2.png"  style = "width: 25%; padding-top: 8%; margin: auto;" alt="" /></a>
                 <header>
-                  <p>Welcome!</p>
+                  <h2>Welcome!</h2>
                 </header>
                 <p>
                   My name is Georges Brunet and I’m an aspiring Game Developer based in Niwot, Colorado. 
