--- a/IBMCapstoneProj.html
+++ b/IBMCapstoneProj.html
@@ -21,24 +21,24 @@
 						<h1><a href="index.html">Georges Brunet</a></h1>
 
 					<!-- Nav -->
-						<nav id="nav">
+					<nav id="nav">
+						<ul>
+						  <li class="current"><a href="index.html">Home</a></li>
+						  <li>
+							<a href="#">Projects</a>
 							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="Work.html">Work</a></li>
-								<li><a href="Education.html">Education</a></li>
-								<li><a href="Skills.html">Skills</a></li>
-								<li class="current">
-									<a href="#">Projects</a>
-									<ul>
-									<li><a href="GameJams.html">Game Jams</a></li>
-									<li><a href="GD50.html">GD50</a></li>
-									<li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
-									</ul>
-								</li>
-								<li><a href="Resume.html">Resume</a></li>
+							  <li><a href="GameJams.html">Game Jams</a></li>
+							  <li><a href="GD50.html">GD50</a></li>
+							  <li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
 							</ul>
-						</nav>
-
+						  </li>
+						  <li><a href="Resume.html">Resume</a></li>
+						  <li><a href="Work.html">Work</a></li>
+						  <li><a href="Education.html">Education</a></li>
+						  <li><a href="Skills.html">Skills</a></li>
+						  
+						</ul>
+					  </nav>
 				</section>
 
 			<!-- Main -->
@@ -131,9 +131,9 @@
 								this pie chart represents the distribution of restaurant types in Denver as determined
 									by my project.
 								<br>
-								<!--<br>
-								<img src = "assets/images/IBMProjPieChart.png" style="max-width:100%; text-align:center; vertical-align:middle; align-items: center; margin: auto;"/>
-								<br>-->
+								<br>
+								<img src = "images/IBMProjPieChart.png" style="max-width:100%; text-align:center; vertical-align:middle; align-items: center; margin: auto;"/>
+								<br>
 								<br>
 								</p>
 
