--- a/GameJams.html
+++ b/GameJams.html
@@ -19,8 +19,8 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul>
-				  <li class="current"><a href="index.html">Home</a></li>
-				  <li>
+				  <li><a href="index.html">Home</a></li>
+				  <li class="current">
 					<a href="#">Projects</a>
 					<ul>
 					  <li><a href="GameJams.html">Game Jams</a></li>
