--- a/Skills.html
+++ b/Skills.html
@@ -23,7 +23,7 @@
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-						  <li class="current"><a href="index.html">Home</a></li>
+						  <li><a href="index.html">Home</a></li>
 						  <li>
 							<a href="#">Projects</a>
 							<ul>
@@ -35,7 +35,7 @@
 						  <li><a href="Resume.html">Resume</a></li>
 						  <li><a href="Work.html">Work</a></li>
 						  <li><a href="Education.html">Education</a></li>
-						  <li><a href="Skills.html">Skills</a></li>
+						  <li class="current"><a href="Skills.html">Skills</a></li>
 						  
 						</ul>
 					  </nav>
