--- a/Work.html
+++ b/Work.html
@@ -23,7 +23,7 @@
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-						  <li class="current"><a href="index.html">Home</a></li>
+						  <li ><a href="index.html">Home</a></li>
 						  <li>
 							<a href="#">Projects</a>
 							<ul>
@@ -33,7 +33,7 @@
 							</ul>
 						  </li>
 						  <li><a href="Resume.html">Resume</a></li>
-						  <li><a href="Work.html">Work</a></li>
+						  <li class="current" ><a href="Work.html">Work</a></li>
 						  <li><a href="Education.html">Education</a></li>
 						  <li><a href="Skills.html">Skills</a></li>
 						  
