--- a/GameJams.html
+++ b/GameJams.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="images/gabicon.png"/>
 	</head>
 
 	<body>
@@ -55,7 +56,7 @@
 									<!-- Game Jam Boxes! -->
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
-											<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image featured"><img src="images/MMcover.png" alt="" /></a>
 											<header>
 												<h3>Game Off Game Jam 2020</h3>
 											</header>
