--- a/Work.html
+++ b/Work.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="images/gabicon.png"/>
 	</head>
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
@@ -51,9 +52,9 @@
 									<article class="box post">
 										<a class="image featured"><img src="images/OctaneXtechlogo.png" style = "width: 70%; padding-top: 8%; margin:auto;" alt="" /></a>
 										<header>
-											<h2>OctaneX Technologies</h2>
-											<p>formerly known as Standard Alcohol, Inc.</p>
-											<h3>Data Science Intern</h3>
+											<h2 style= "text-align: center;">OctaneX Technologies</h2>
+											<p style= "text-align: center;">formerly known as Standard Alcohol, Inc.</p>
+											<h3 style= "text-align: center;">Data Science Intern</h3>
 										</header>
 										<p>
 											From June 2018 to June 2019, I had the pleasure of working as a Data Science Intern at OctaneX
@@ -61,7 +62,7 @@
 												I performed various tasks such as software engineering, database architecture and management, 
 												product analysis and development, data analytics, and reports generation.
 											</p>
-											<h3> OctaneX Optimizer </h3>
+											<h3 style= "text-align: center;"> OctaneX Optimizer </h3>
 											<p>
 											The first project I worked on at OctaneX Technologies was the OctaneX Optimizer. 
 											I was given the task of designing, developing, and coding the software with the creative 
@@ -88,8 +89,8 @@
 									<section class="box">
 										<a class="image featured"><img src="images/CUBoulderlogo.png" style = "width: 60%; padding-top: 8%; margin:auto;" alt="" /></a>
 										<header>
-											<h2>CU Boulder Department of French and Italian</h2>
-											<h3>French Tutor</h3>
+											<h2 style= "text-align: center;">CU Boulder Department of French and Italian</h2>
+											<h3 style= "text-align: center;">French Tutor</h3>
 										</header>
 										<p>From September 2016 to March 2018, I worked as a tutor at the Department of French and 
 											Italian at the University of Colorado, Boulder. I provided services to students of all levels, 
@@ -102,13 +103,11 @@
 											form of writing. 
 										</p>
 									</section>
-								</div>
-								<div class="col-6 col-12-small">
 									<section class="box">
 										<a class="image featured"><img src="images/AGVlogo1.png" style = "width: 40%; padding-top: 8%; margin:auto;" alt="" /></a>
 										<header>
-											<h2>Aspen Growth Ventures, LLC</h2>
-											<h3>Data Analytics Intern</h3>
+											<h2 style= "text-align: center;">Aspen Growth Ventures, LLC</h2>
+											<h3 style= "text-align: center;">Data Analytics Intern</h3>
 										</header>
 										<p>As a Data Analytics Intern at AGV, my role included database creation and management, 
 											product design and development, and data analytics. I was tasked with developing and 
