--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<title>Georges Brunet</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="icon" type="image/png" href="images/gabicon.png"/>
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -77,8 +78,8 @@
                 </header>
                 <p>
                   My name is Georges Brunet and I’m an aspiring Game Developer based in Niwot, Colorado. 
-                  Ever since I was a little boy, I have always loved to play video games and been fascinated by the work behind them. 
-                  Whether the game is a triple - A title or something as simple as Flappy bird, on a high end desktop or a SNES, I have always seen the charm of the art. 
+                  Ever since I can remember, I have always loved to play video games and been fascinated by the work behind them. 
+                  Whether the game is a AAA title or something as simple as Flappy bird, I have always seen the charm of the art. 
                   I am turning this passion and the skills and experiences I've acquired in professional and academic settings into creating wonderful games.
                   These creations will be available in the projects tab, as well as other past, present and future projects!
                 </p>
