--- a/Education.html
+++ b/Education.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="images/gabicon.png"/>
 	</head>
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
@@ -48,88 +49,83 @@
 						<div class="row">
 							<div class="col-8 col-12-medium">
 
-								<!-- Content -->
+								<!-- College Education -->
 									<article class="box post">
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
-											<h2>Right sidebar</h2>
-											<p>Lorem ipsum dolor sit amet feugiat</p>
+											<h2 style= "text-align: center;">College Education</h2>
 										</header>
-										<p>
-											Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
-											hendrerit libero placerat. Nulla facilisi. Proin aliquam felis non arcu molestie at accumsan turpis commodo.
-											Proin elementum, nibh non egestas sodales, augue quam aliquet est, id egestas diam justo adipiscing ante.
-											Pellentesque tempus nulla non urna eleifend ut ultrices nisi faucibus.
+										<a href="#" class="image featured"><img src="images/CUBoulderlogo.png" style="width: 40%; padding-top: 8%; margin: auto;" alt="" /></a>
+										<h3 style= "text-align: center;"> University of Colorado, Boulder   College of Arts & Sciences </h3>
+										<p style= "text-align: center;">
+											Bachelor of Arts in Mathematics, Concentration in Applicability and Statistics & French Minor
+											<br>
+											<i style= "text-align: center;">Graduated August 2019</i>
 										</p>
-										<p>
-											Praesent a dolor leo. Duis in felis in tortor lobortis volutpat et pretium tellus. Vestibulum ac ante nisl,
-											a elementum odio. Duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-											placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-											eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-											elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-											sit amet nullam consequat feugiat dolore tempus.
+									</article>
+								
+								<!-- Certificates -->
+
+									<article class="box post">
+										<header>
+											<h2 style= "text-align: center;">Certificates</h2>
+										</header>
+										<a href="#" class="image featured"><img src="images/HarvardXLogo.png" style="width: 40%; padding-top: 8%; margin: auto;" alt="" /></a>
+										<h3 style= "text-align: center;"> Computer Science for Game Development </h3>
+										<p style= "text-align: center;">
+											Provides in-depth programming experience through assignments where we create or expand on functionalities in games.
+											<br>
+											<i style= "text-align: center;">Completed November 2020</i>
 										</p>
-										<section>
-											<header>
-												<h3>Something else</h3>
-											</header>
-											<p>
-												Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-												placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
-											</p>
-											<p>
-												Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
-											</p>
-										</section>
-										<section>
-											<header>
-												<h3>So in conclusion ...</h3>
-											</header>
-											<p>
-												Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus. Elementum odio duis semper risus et lectus commodo fringilla.
-												Maecenas sagittis convallis justo vel mattis.
-											</p>
-										</section>
+										<a href="#" class="image featured"><img src="images/IBMlogo.png" style="width: 40%; padding-top: 8%; margin: auto;" alt="" /></a>
+										<h3 style= "text-align: center;"> Data Science Professional Certificate </h3>
+										<p style= "text-align: center;">
+											Provides job-ready skills and techniques including data visualization, data analysis, machine learning,
+											 open source tools and libraries, methodologies, Python, databases, and SQL.
+											<br>
+											<i style= "text-align: center;">Completed February 2020</i>
+										</p>
+									</article>
+
+								<!-- High School Education -->
+
+									<article class="box post">
+										<header>
+											<h2 style= "text-align: center;">High School Education</h2>
+										</header>
+										<a href="#" class="image featured"><img src="images/FVhslogo.png" style="width: 30%; padding-top: 8%; margin: auto;" alt="" /></a>
+										<h3 style= "text-align: center;"> Fairview High School </h3>
+										<p style= "text-align: center;">
+											Located in Sao Paolo, Brazil, I spent the second semester of Sophomore year, Junior year and a portion of Senior year at this prestigious high school.
+											<br>
+											<i style= "text-align: center;">Graduated May 2015</i>
+										</p>
+										<a href="#" class="image featured"><img src="images/Gradedlogo.png" style="width: 30%; padding-top: 8%; margin: auto;" alt="" /></a>
+										<h3 style= "text-align: center;"> Graded School </h3>
+										<p style= "text-align: center;">
+											Located in Sao Paolo, Brazil, I spent the second semester of Sophomore year, Junior year and a portion of Senior year at this prestigious high school.
+										</p>
+										<a href="#" class="image featured"><img src="images/MHSlogo.png" style="width: 30%; padding-top: 8%; margin: auto;" alt="" /></a>
+										<h3 style= "text-align: center;"> Millburn High School </h3>
+										<p style= "text-align: center;">
+											Located in Millburn, New Jersey, I spent Freshman and the first semester of Sophomore year at this prestigious high school.
+										</p>
 									</article>
 
 							</div>
+
 							<div class="col-4 col-12-medium">
 
 								<!-- Sidebar -->
-									<section class="box">
-										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-										<header>
-											<h3>Sed etiam lorem nulla</h3>
-										</header>
-										<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-										<footer>
-											<a href="#" class="button alt">Magna sed taciti</a>
-										</footer>
-									</section>
-									<section class="box">
-										<header>
-											<h3>Feugiat consequat</h3>
-										</header>
-										<p>Veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat sed lorem consequat feugiat lorem dolore.</p>
-										<ul class="divided">
-											<li><a href="#">Sed et blandit consequat sed</a></li>
-											<li><a href="#">Hendrerit tortor vitae sapien dolore</a></li>
-											<li><a href="#">Sapien id suscipit magna sed felis</a></li>
-											<li><a href="#">Aptent taciti sociosqu ad litora</a></li>
-										</ul>
-										<footer>
-											<a href="#" class="button alt">Ipsum consequat</a>
-										</footer>
-									</section>
+								<section class="box">
+									<header>
+									  <ul class="social">
+										<li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/georges-a-brunet/"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon brands fa-github" href="https://github.com/GeorgesABrunet"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon brands fa-itch-io" href="https://pootpootpoot.itch.io/"><span class="label">LinkedIn</span></a></li>
+									  </ul>
+									</header>
+									<p>Find my contact information on LinkedIn, and my projects on itch.io and Github!</p>
+								  </section>
 
 							</div>
 						</div>
